--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 
-    "short_name": "Twittor",
-    "name": "Twittor para héroes",
+    "short_name": "Ferran",
+    "name": "Inversionistas Grupo Ferran",
     "start_url": "index.html",
     "background_color": "#3498db",
     "theme_color": "#3498db",
